--- a/contes/index.html
+++ b/contes/index.html
@@ -13,10 +13,10 @@
   <script src="../Jasmine/boot.js"></script>
 
 <!-- include source files here... -->
-<script type="text/javascript" src="./task.js"></script>
+<script type="text/javascript" src="task.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="./tests.js"></script>
+  <script type="text/javascript" src="tests.js"></script>
 </head>
 
 <body>
