--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <title>Основные понятия</title>
 
-  <link rel="shortcut icon" type="image/png" href="../Jasmine/jasmine_favicon.png">
-  <link rel="stylesheet" href="../Jasmine/jasmine.css">
-  <link rel="stylesheet" href="../assets/css/style.css" />
+  <link rel="shortcut icon" type="image/png" href="Jasmine/jasmine_favicon.png">
+  <link rel="stylesheet" href="Jasmine/jasmine.css">
+  <link rel="stylesheet" href="assets/css/style.css" />
 
-  <script src="../Jasmine/jasmine.js"></script>
-  <script src="../Jasmine/jasmine-html.js"></script>
-  <script src="../Jasmine/boot.js"></script>
+  <script src="Jasmine/jasmine.js"></script>
+  <script src="Jasmine/jasmine-html.js"></script>
+  <script src="Jasmine/boot.js"></script>
 
 <!-- include source files here... -->
 <script type="text/javascript" src="task.js"></script>
